--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 group 'edu.pku.sei.wusj'
 version '0.1.0-SNAPSHOT'
 
+
 sourceCompatibility = 1.8
 
 repositories {
@@ -13,14 +14,12 @@ repositories {
     mavenCentral()
 }
 
-
 dependencies {
-    //compile fileTree(dir:'lib',include:['*.jar'])
     compile 'org.neo4j:neo4j-ogm-core:3.1.6'
     compile 'org.neo4j:neo4j-ogm-bolt-driver:3.1.6' // Only add if you're using the Bolt driver
     compile 'org.slf4j:slf4j-nop:1.7.25'
-    //compile 'org.neo4j:neo4j-ogm-core:3.2.0-SNAPSHOT'
-    //compile 'org.neo4j:neo4j-ogm-bolt-driver:3.2.0-SNAPSHOT' // Only add if you're using the Bolt driver
+    compile 'org.springframework:spring-web:5.1.8.RELEASE'
+    compile("com.fasterxml.jackson.core:jackson-databind:2.9.9")
     implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.14.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
